# scim

./: .gitignore  .travis.yml  Makefile.am  README  README.md  config.h  configure.ac  meson.build  meson_options.txt  scim.spec.in
.github/workflows/: ci.yml
configs/: meson.build
data/: meson.build
data/icons/: meson.build
data/pixmaps/: meson.build
debian/: README.Qt  changelog  control  rules  scim-gtk-immodule.install  scim-modules-ibus.install  scim-qt5-immodule.install  scim.docs
debian/im-switch/: scim-immodule
docs/: meson.build
docs/manual/: meson.build
docs/manual/zh_CN/: meson.build
docs/manual/zh_CN/figures/: meson.build
extras/: meson.build
extras/gtk_immodule/: meson.build
extras/gtk_immodule/gtk2/: meson.build
extras/gtk_immodule/gtk3/: meson.build
extras/immodules/: meson.build
extras/immodules/agent/: meson.build
extras/immodules/agent/utils/: meson.build
extras/immodules/client-clutter/: meson.build
extras/immodules/client-common/: meson.build
extras/immodules/client-gtk/: meson.build  scim-bridge-client-imcontext-gtk.c  scim-bridge-client-imcontext-gtk.h
extras/immodules/client-gtk/gtk2/: Makefile.am  meson.build
extras/immodules/client-gtk/gtk3/: Makefile.am  meson.build
extras/immodules/client-gtk/gtk4/: meson.build  scim-bridge-client-imcontext-gtk.c
extras/immodules/client-qt/: im-scim-bridge-qt.cpp  im-scim-bridge-qt.h  meson.build  scim-bridge-client-imcontext-qt.cpp  scim-bridge-client-imcontext-qt.h  scim-bridge-client-key-event-utility-qt.cpp  scim-bridge-client-key-event-utility-qt.h
extras/immodules/client-qt/qt3/: meson.build
extras/immodules/client-qt/qt4/: meson.build
extras/immodules/client-qt/qt5/: meson.build
extras/immodules/common/: meson.build
extras/immodules/doc/: meson.build
extras/panel/: meson.build
extras/setup/: meson.build
modules/: meson.build
modules/Config/: meson.build
modules/Filter/: meson.build
modules/FrontEnd/: Makefile.am  meson.build  scim_ibus_ctx.cpp  scim_ibus_ctx.h  scim_ibus_frontend.cpp  scim_ibus_frontend.h  scim_ibus_ic.cpp  scim_ibus_ic.h  scim_ibus_types.h  scim_ibus_utils.h
modules/FrontEnd/IMdkit/: meson.build
modules/IMEngine/: meson.build
modules/SetupUI/: meson.build
po/: meson.build
src/: meson.build
src/executables/: meson.build
subprojects/ltdl/: ltdl.c  ltdl.h  meson.build
tests/: meson.build
utils/: meson.build
