option('gtk2-im-module-dir', type: 'string', value: '', description: 'Select GTK2 immodule dir')
option('gtk3-im-module-dir', type: 'string', value: '', description: 'Select GTK3 immodule dir')
option('gtk4-im-module-dir', type: 'string', value: '', description: 'Select GTK4 immodule dir')

option('qt3-moc', type: 'string', value: '', description: 'Select QT3 moc program')
option('qt4-moc', type: 'string', value: '', description: 'Select QT4 moc program')
option('qt5-moc', type: 'string', value: '', description: 'Select QT5 moc program')

option('qt3-im-module-dir', type: 'string', value: '', description: 'Select QT3 immodule dir')
option('qt4-im-module-dir', type: 'string', value: '', description: 'Select QT4 immodule dir')
option('qt5-im-module-dir', type: 'string', value: '', description: 'Select QT5 immodule dir')
option('clutter-im-module-dir', type: 'string', value: '', description: 'Select clutter immodule dir')

option('gtk-version', type: 'combo', choices: ['2', '3', '4', 'auto'], value: '3', description: 'Select gtk version (default is 3)')

option('ld-version-script', type: 'boolean', value: false, description: 'Use ld version script to limit exported symbols')
option('ltdladvise', type: 'boolean', value: false, description: 'Use lt_dladvise for module loading')
option('enable_debug', type: 'boolean', value: false, description: 'Turn on debugging')
option('tests', type: 'boolean', value: false, description: 'Build tests/*')
option('documents', type: 'boolean', value: false, description: 'Build documents')
option('hash-map', type: 'boolean', value: false, description: 'Use hash_map instead of std::map internally')

option('config-simple', type: 'boolean', value: true, description: 'Build Simple Config module')
option('config-socket', type: 'boolean', value: true, description: 'Build Socket Config module')

option('frontend-x11', type: 'boolean', value: true, description: 'Build X11 FrontEnd module')
option('frontend-socket', type: 'boolean', value: true, description: 'Build Socket FrontEnd module')
option('frontend-ibus', type: 'boolean', value: true, description: 'Build IBus FrontEnd module')

option('im-rawcode', type: 'boolean', value: true, description: 'Build RawCode IMEngine module')
option('im-socket', type: 'boolean', value: true, description: 'Build Socket IMEngine module')

option('filter-sctc', type: 'boolean', value: true, description: 'Build Simplified/Traditional Chinese conversion Filter module')

option('orig-gtk2-immodule', type: 'boolean', value: false, description: 'Build original GTK2 IMModule')
option('orig-gtk3-immodule', type: 'boolean', value: false, description: 'Build original GTK3 IMModule')

option('agent', type: 'boolean', value: true, description: 'Build scim-im-agent')

option('gtk2-immodule', type: 'boolean', value: true, description: 'Build GTK2 IMModule')
option('gtk3-immodule', type: 'boolean', value: true, description: 'Build GTK3 IMModule')
option('gtk4-immodule', type: 'boolean', value: true, description: 'Build GTK4 IMModule')

option('qt3-immodule', type: 'boolean', value: true, description: 'Build QT3 IMModule')
option('qt4-immodule', type: 'boolean', value: true, description: 'Build QT4 IMModule')
option('qt5-immodule', type: 'boolean', value: true, description: 'Build QT5 IMModule')

option('clutter-immodule', type: 'boolean', value: false, description: 'Build CLUTTER IMModule')

option('panel-gtk', type: 'feature', value: 'auto', description: 'Build GTK Panel')
option('setup-ui', type: 'boolean', value: true, description: 'Build Setup UI')
